--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,10 @@
-*{
-    background: #333;
-    color: white;
-}
+@import 'normalize.css';
+@import 'base/_variables.css';
+@import 'base/_global.css';
+@import 'modules/_main.css';
+@import 'modules/_tabmenu.css';
+@import 'modules/_toolbar.css';
+
+
+@import 'modules/_layout.css';
+@import 'modules/_toolbarMenu.css';
