--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,8 +3,10 @@
 @import 'base/_global.css';
 @import 'modules/_main.css';
 @import 'modules/_tabmenu.css';
-@import 'modules/_toolbar.css';
+
 
 
 @import 'modules/_layout.css';
+@import 'modules/_hm.css';
 @import 'modules/_toolbarMenu.css';
+@import 'modules/_toolbar.css';
