--- a/src/styles/modules/_toolbar.css
+++ b/src/styles/modules/_toolbar.css
@@ -3,9 +3,60 @@
     height: $toolbar-height;
     border: 1px solid $tabmenu-line-color;
     background: $tabmenu-bg-color;
-    
+    cursor: pointer;
+
     .sec{
         border: 1px solid $tabmenu-line-color;
+        display: flex;
+        flex-direction: column;
+        .main-mnu-bar{
+            border: 1px solid darkmagenta;
+            flex: 1;
+            display: flex;
+
+            .main-menu-bar-group-big{
+                border: 1px solid darkmagenta;
+                width: 150px;
+                display: flex;
+
+                .mnu-btn-big{
+                    border: solid red;
+                    height: 100%;
+                }
+
+               
+            }
+
+            .main-menu-bar-group-small{
+                border: 1px solid darkmagenta;
+                width: 150px;
+                display: flex;
+                flex-direction: column;
+
+
+
+                .mnu-btn-small{
+                    border: solid red;
+                    flex: 1;
+                }
+            }
+
+        }
+        .mnu-bar{
+            display: flex;
+            border: 1px solid darkmagenta;
+
+            .menu-bar-text{
+                flex: 1;
+                border: 1px solid red;
+                text-align: center;
+            }
+
+            .menu-bar-drop-down{
+                width: 20px;
+                border: 1px solid red;
+            }
+        }
     }
     .t-menu{
         background: inherit;
@@ -31,4 +82,8 @@
     }
 
    
+}
+
+.toolbar:hover{
+    background: lawngreen;
 }
