--- a/src/styles/modules/_toolbarMenu.css
+++ b/src/styles/modules/_toolbarMenu.css
@@ -1,3 +1,88 @@
+
+  
+  
+  
+
+  .hm-menu{
+      display: flex;
+      padding: 3px 10px 1px 10px;        
+      background: $tabmenu-bg-color;
+      cursor: pointer;
+
+      ul {
+        
+          visibility: hidden;
+          opacity: 0;
+          position: absolute;
+          transition: all 0.5s ease;
+          margin-top: calc($tabmenu-heigth - 3px);
+          margin-left: 1px;
+          border: 1px solid $tabmenu-line-color;
+          
+          left: 0;
+          display: none;
+          padding: 0;
+          
+
+          li {
+              
+              clear: both;
+              margin: 0;
+              cursor: pointer;
+              background: inherit;
+              border-bottom: 1px solid $tabmenu-line-color;
+              height: 40px;
+              display: flex;
+              align-items: center;
+              padding: 0 8px;
+
+              
+              svg{
+                display: inline-block;
+                vertical-align: middle
+
+              }
+              
+              div{
+                vertical-align: middle;
+                background: inherit;           
+                margin-left: 8px;
+              }
+
+              
+
+         
+            }
+            
+            
+            li:hover{
+              background: yellow;
+              color: black;
+            }
+
+            
+      }
+  
+     
+  
+      }
+
+      li:hover > ul,
+      li ul:hover {
+        visibility: visible;
+        opacity: 1;
+        display: block;
+      }
+
+
+
+
+
+/*
+a {
+text-decoration: none;
+}
+
 .hm{
     display: flex;
     height: $tabmenu-heigth;
@@ -34,7 +119,7 @@
                 margin: 0;
                 cursor: pointer;
                 background: $tab-bg-color;
-                /*border-bottom: 1px solid $tabmenu-line-color;*/
+                border-bottom: 1px solid $tabmenu-line-color;
                 height: 30px;
                 display: flex;
                 align-items: center;
@@ -79,3 +164,6 @@
 a {
   text-decoration: none;
 }
+
+
+*/
